lib/parser.automaton
State 0:
## Known stack suffix:
##
## LR(1) items:
program' -> . program [ # ]
## Transitions:
-- On sep_lines shift to state 1
-- On program shift to state 153
## Reductions:
-- On WHILE TRUE STRING RETURN REGEX REC NOT NIL NEWLINE MINUS LPAREN LET LBRACKET LBRACE INT IF IDENT FOR FN FLOAT FALSE EOF
--   reduce production sep_lines ->

State 1:
## Known stack suffix:
## sep_lines
## LR(1) items:
program -> sep_lines . terminated_stmts EOF [ # ]
sep_lines -> sep_lines . NEWLINE [ WHILE TRUE STRING RETURN REGEX REC NOT NIL NEWLINE MINUS LPAREN LET LBRACKET LBRACE INT IF IDENT FOR FN FLOAT FALSE EOF ]
## Transitions:
-- On WHILE shift to state 2
-- On TRUE shift to state 3
-- On STRING shift to state 4
-- On RETURN shift to state 23
-- On REGEX shift to state 5
-- On REC shift to state 78
-- On NOT shift to state 6
-- On NIL shift to state 7
-- On NEWLINE shift to state 85
-- On MINUS shift to state 8
-- On LPAREN shift to state 9
-- On LET shift to state 86
-- On LBRACKET shift to state 10
-- On LBRACE shift to state 11
-- On INT shift to state 12
-- On IF shift to state 90
-- On IDENT shift to state 102
-- On FOR shift to state 105
-- On FN shift to state 110
-- On FLOAT shift to state 24
-- On FALSE shift to state 25
-- On unary_expr shift to state 26
-- On terminated_stmts shift to state 151
-- On stmt shift to state 118
-- On primary_expr shift to state 27
-- On postfix_expr shift to state 124
-- On or_expr shift to state 30
-- On mul_expr shift to state 32
-- On match_expr shift to state 39
-- On expr shift to state 131
-- On concat_expr shift to state 44
-- On cmp_expr shift to state 47
-- On and_expr shift to state 71
-- On add_expr shift to state 50
## Reductions:
-- On EOF
--   reduce production terminated_stmts ->

State 2:
## Known stack suffix:
## WHILE
## LR(1) items:
stmt -> WHILE . expr block [ RBRACE NEWLINE EOF ]
## Transitions:
-- On TRUE shift to state 3
-- On STRING shift to state 4
-- On REGEX shift to state 5
-- On NOT shift to state 6
-- On NIL shift to state 7
-- On MINUS shift to state 8
-- On LPAREN shift to state 9
-- On LBRACKET shift to state 10
-- On LBRACE shift to state 11
-- On INT shift to state 12
-- On IDENT shift to state 13
-- On FN shift to state 14
-- On FLOAT shift to state 24
-- On FALSE shift to state 25
-- On unary_expr shift to state 26
-- On primary_expr shift to state 27
-- On postfix_expr shift to state 28
-- On or_expr shift to state 30
-- On mul_expr shift to state 32
-- On match_expr shift to state 39
-- On expr shift to state 149
-- On concat_expr shift to state 44
-- On cmp_expr shift to state 47
-- On and_expr shift to state 71
-- On add_expr shift to state 50
## Reductions:

State 3:
## Known stack suffix:
## TRUE
## LR(1) items:
primary_expr -> TRUE . [ STAR SLASH RPAREN REGEX_REPLACE RBRACKET RBRACE PLUSPLUS PLUS PERCENT OR NOT_MATCH_OP NEWLINE NEQ MINUS MATCH_OP LT LPAREN LE LBRACKET LBRACE GT GE EQEQ EOF COMMA COLON AND ]
## Transitions:
## Reductions:
-- On STAR SLASH RPAREN REGEX_REPLACE RBRACKET RBRACE PLUSPLUS PLUS PERCENT OR NOT_MATCH_OP NEWLINE NEQ MINUS MATCH_OP LT LPAREN LE LBRACKET LBRACE GT GE EQEQ EOF COMMA COLON AND
--   reduce production primary_expr -> TRUE

State 4:
## Known stack suffix:
## STRING
## LR(1) items:
primary_expr -> STRING . [ STAR SLASH RPAREN REGEX_REPLACE RBRACKET RBRACE PLUSPLUS PLUS PERCENT OR NOT_MATCH_OP NEWLINE NEQ MINUS MATCH_OP LT LPAREN LE LBRACKET LBRACE GT GE EQEQ EOF COMMA COLON AND ]
## Transitions:
## Reductions:
-- On STAR SLASH RPAREN REGEX_REPLACE RBRACKET RBRACE PLUSPLUS PLUS PERCENT OR NOT_MATCH_OP NEWLINE NEQ MINUS MATCH_OP LT LPAREN LE LBRACKET LBRACE GT GE EQEQ EOF COMMA COLON AND
--   reduce production primary_expr -> STRING

State 5:
## Known stack suffix:
## REGEX
## LR(1) items:
primary_expr -> REGEX . [ STAR SLASH RPAREN REGEX_REPLACE RBRACKET RBRACE PLUSPLUS PLUS PERCENT OR NOT_MATCH_OP NEWLINE NEQ MINUS MATCH_OP LT LPAREN LE LBRACKET LBRACE GT GE EQEQ EOF COMMA COLON AND ]
## Transitions:
## Reductions:
-- On STAR SLASH RPAREN REGEX_REPLACE RBRACKET RBRACE PLUSPLUS PLUS PERCENT OR NOT_MATCH_OP NEWLINE NEQ MINUS MATCH_OP LT LPAREN LE LBRACKET LBRACE GT GE EQEQ EOF COMMA COLON AND
--   reduce production primary_expr -> REGEX

State 6:
## Known stack suffix:
## NOT
## LR(1) items:
unary_expr -> NOT . unary_expr [ STAR SLASH RPAREN RBRACKET RBRACE PLUSPLUS PLUS PERCENT OR NOT_MATCH_OP NEWLINE NEQ MINUS MATCH_OP LT LE LBRACE GT GE EQEQ EOF COMMA COLON AND ]
## Transitions:
-- On TRUE shift to state 3
-- On STRING shift to state 4
-- On REGEX shift to state 5
-- On NOT shift to state 6
-- On NIL shift to state 7
-- On MINUS shift to state 8
-- On LPAREN shift to state 9
-- On LBRACKET shift to state 10
-- On LBRACE shift to state 11
-- On INT shift to state 12
-- On IDENT shift to state 13
-- On FN shift to state 14
-- On FLOAT shift to state 24
-- On FALSE shift to state 25
-- On unary_expr shift to state 148
-- On primary_expr shift to state 27
-- On postfix_expr shift to state 28
## Reductions:

State 7:
## Known stack suffix:
## NIL
## LR(1) items:
primary_expr -> NIL . [ STAR SLASH RPAREN REGEX_REPLACE RBRACKET RBRACE PLUSPLUS PLUS PERCENT OR NOT_MATCH_OP NEWLINE NEQ MINUS MATCH_OP LT LPAREN LE LBRACKET LBRACE GT GE EQEQ EOF COMMA COLON AND ]
## Transitions:
## Reductions:
-- On STAR SLASH RPAREN REGEX_REPLACE RBRACKET RBRACE PLUSPLUS PLUS PERCENT OR NOT_MATCH_OP NEWLINE NEQ MINUS MATCH_OP LT LPAREN LE LBRACKET LBRACE GT GE EQEQ EOF COMMA COLON AND
--   reduce production primary_expr -> NIL

State 8:
## Known stack suffix:
## MINUS
## LR(1) items:
unary_expr -> MINUS . unary_expr [ STAR SLASH RPAREN RBRACKET RBRACE PLUSPLUS PLUS PERCENT OR NOT_MATCH_OP NEWLINE NEQ MINUS MATCH_OP LT LE LBRACE GT GE EQEQ EOF COMMA COLON AND ]
## Transitions:
-- On TRUE shift to state 3
-- On STRING shift to state 4
-- On REGEX shift to state 5
-- On NOT shift to state 6
-- On NIL shift to state 7
-- On MINUS shift to state 8
-- On LPAREN shift to state 9
-- On LBRACKET shift to state 10
-- On LBRACE shift to state 11
-- On INT shift to state 12
-- On IDENT shift to state 13
-- On FN shift to state 14
-- On FLOAT shift to state 24
-- On FALSE shift to state 25
-- On unary_expr shift to state 147
-- On primary_expr shift to state 27
-- On postfix_expr shift to state 28
## Reductions:

State 9:
## Known stack suffix:
## LPAREN
## LR(1) items:
primary_expr -> LPAREN . expr RPAREN [ STAR SLASH RPAREN REGEX_REPLACE RBRACKET RBRACE PLUSPLUS PLUS PERCENT OR NOT_MATCH_OP NEWLINE NEQ MINUS MATCH_OP LT LPAREN LE LBRACKET LBRACE GT GE EQEQ EOF COMMA COLON AND ]
## Transitions:
-- On TRUE shift to state 3
-- On STRING shift to state 4
-- On REGEX shift to state 5
-- On NOT shift to state 6
-- On NIL shift to state 7
-- On MINUS shift to state 8
-- On LPAREN shift to state 9
-- On LBRACKET shift to state 10
-- On LBRACE shift to state 11
-- On INT shift to state 12
-- On IDENT shift to state 13
-- On FN shift to state 14
-- On FLOAT shift to state 24
-- On FALSE shift to state 25
-- On unary_expr shift to state 26
-- On primary_expr shift to state 27
-- On postfix_expr shift to state 28
-- On or_expr shift to state 30
-- On mul_expr shift to state 32
-- On match_expr shift to state 39
-- On expr shift to state 145
-- On concat_expr shift to state 44
-- On cmp_expr shift to state 47
-- On and_expr shift to state 71
-- On add_expr shift to state 50
## Reductions:

State 10:
## Known stack suffix:
## LBRACKET
## LR(1) items:
primary_expr -> LBRACKET . array_elems RBRACKET [ STAR SLASH RPAREN REGEX_REPLACE RBRACKET RBRACE PLUSPLUS PLUS PERCENT OR NOT_MATCH_OP NEWLINE NEQ MINUS MATCH_OP LT LPAREN LE LBRACKET LBRACE GT GE EQEQ EOF COMMA COLON AND ]
## Transitions:
-- On TRUE shift to state 3
-- On STRING shift to state 4
-- On REGEX shift to state 5
-- On NOT shift to state 6
-- On NIL shift to state 7
-- On MINUS shift to state 8
-- On LPAREN shift to state 9
-- On LBRACKET shift to state 10
-- On LBRACE shift to state 11
-- On INT shift to state 12
-- On IDENT shift to state 13
-- On FN shift to state 14
-- On FLOAT shift to state 24
-- On FALSE shift to state 25
-- On unary_expr shift to state 26
-- On primary_expr shift to state 27
-- On postfix_expr shift to state 28
-- On or_expr shift to state 30
-- On mul_expr shift to state 32
-- On match_expr shift to state 39
-- On expr shift to state 140
-- On concat_expr shift to state 44
-- On cmp_expr shift to state 47
-- On array_elems shift to state 143
-- On and_expr shift to state 71
-- On add_expr shift to state 50
## Reductions:
-- On RBRACKET
--   reduce production array_elems ->

State 11:
## Known stack suffix:
## LBRACE
## LR(1) items:
primary_expr -> LBRACE . hash_pairs RBRACE [ STAR SLASH RPAREN REGEX_REPLACE RBRACKET RBRACE PLUSPLUS PLUS PERCENT OR NOT_MATCH_OP NEWLINE NEQ MINUS MATCH_OP LT LPAREN LE LBRACKET LBRACE GT GE EQEQ EOF COMMA COLON AND ]
## Transitions:
-- On TRUE shift to state 3
-- On STRING shift to state 4
-- On REGEX shift to state 5
-- On NOT shift to state 6
-- On NIL shift to state 7
-- On MINUS shift to state 8
-- On LPAREN shift to state 9
-- On LBRACKET shift to state 10
-- On LBRACE shift to state 11
-- On INT shift to state 12
-- On IDENT shift to state 13
-- On FN shift to state 14
-- On FLOAT shift to state 24
-- On FALSE shift to state 25
-- On unary_expr shift to state 26
-- On primary_expr shift to state 27
-- On postfix_expr shift to state 28
-- On or_expr shift to state 30
-- On mul_expr shift to state 32
-- On match_expr shift to state 39
-- On hash_pairs shift to state 133
-- On expr shift to state 135
-- On concat_expr shift to state 44
-- On cmp_expr shift to state 47
-- On and_expr shift to state 71
-- On add_expr shift to state 50
## Reductions:
-- On RBRACE
--   reduce production hash_pairs ->

State 12:
## Known stack suffix:
## INT
## LR(1) items:
primary_expr -> INT . [ STAR SLASH RPAREN REGEX_REPLACE RBRACKET RBRACE PLUSPLUS PLUS PERCENT OR NOT_MATCH_OP NEWLINE NEQ MINUS MATCH_OP LT LPAREN LE LBRACKET LBRACE GT GE EQEQ EOF COMMA COLON AND ]
## Transitions:
## Reductions:
-- On STAR SLASH RPAREN REGEX_REPLACE RBRACKET RBRACE PLUSPLUS PLUS PERCENT OR NOT_MATCH_OP NEWLINE NEQ MINUS MATCH_OP LT LPAREN LE LBRACKET LBRACE GT GE EQEQ EOF COMMA COLON AND
--   reduce production primary_expr -> INT

State 13:
## Known stack suffix:
## IDENT
## LR(1) items:
primary_expr -> IDENT . [ STAR SLASH RPAREN RBRACKET RBRACE PLUSPLUS PLUS PERCENT OR NOT_MATCH_OP NEWLINE NEQ MINUS MATCH_OP LT LPAREN LE LBRACKET LBRACE GT GE EQEQ EOF COMMA COLON AND ]
## Transitions:
## Reductions:
-- On STAR SLASH RPAREN RBRACKET RBRACE PLUSPLUS PLUS PERCENT OR NOT_MATCH_OP NEWLINE NEQ MINUS MATCH_OP LT LPAREN LE LBRACKET LBRACE GT GE EQEQ EOF COMMA COLON AND
--   reduce production primary_expr -> IDENT

State 14:
## Known stack suffix:
## FN
## LR(1) items:
primary_expr -> FN . LPAREN param_list RPAREN block [ STAR SLASH RPAREN RBRACKET RBRACE PLUSPLUS PLUS PERCENT OR NOT_MATCH_OP NEWLINE NEQ MINUS MATCH_OP LT LPAREN LE LBRACKET LBRACE GT GE EQEQ EOF COMMA COLON AND ]
## Transitions:
-- On LPAREN shift to state 15
## Reductions:

State 15:
## Known stack suffix:
## FN LPAREN
## LR(1) items:
primary_expr -> FN LPAREN . param_list RPAREN block [ STAR SLASH RPAREN REGEX_REPLACE RBRACKET RBRACE PLUSPLUS PLUS PERCENT OR NOT_MATCH_OP NEWLINE NEQ MINUS MATCH_OP LT LPAREN LE LBRACKET LBRACE GT GE EQEQ EOF COMMA COLON AND ]
## Transitions:
-- On IDENT shift to state 16
-- On param_list shift to state 19
## Reductions:
-- On RPAREN
--   reduce production param_list ->

State 16:
## Known stack suffix:
## IDENT
## LR(1) items:
param_list -> IDENT . [ RPAREN ]
param_list -> IDENT . COMMA param_list [ RPAREN ]
## Transitions:
-- On COMMA shift to state 17
## Reductions:
-- On RPAREN
--   reduce production param_list -> IDENT

State 17:
## Known stack suffix:
## IDENT COMMA
## LR(1) items:
param_list -> IDENT COMMA . param_list [ RPAREN ]
## Transitions:
-- On IDENT shift to state 16
-- On param_list shift to state 18
## Reductions:
-- On RPAREN
--   reduce production param_list ->

State 18:
## Known stack suffix:
## IDENT COMMA param_list
## LR(1) items:
param_list -> IDENT COMMA param_list . [ RPAREN ]
## Transitions:
## Reductions:
-- On RPAREN
--   reduce production param_list -> IDENT COMMA param_list

State 19:
## Known stack suffix:
## FN LPAREN param_list
## LR(1) items:
primary_expr -> FN LPAREN param_list . RPAREN block [ STAR SLASH RPAREN REGEX_REPLACE RBRACKET RBRACE PLUSPLUS PLUS PERCENT OR NOT_MATCH_OP NEWLINE NEQ MINUS MATCH_OP LT LPAREN LE LBRACKET LBRACE GT GE EQEQ EOF COMMA COLON AND ]
## Transitions:
-- On RPAREN shift to state 20
## Reductions:

State 20:
## Known stack suffix:
## FN LPAREN param_list RPAREN
## LR(1) items:
primary_expr -> FN LPAREN param_list RPAREN . block [ STAR SLASH RPAREN REGEX_REPLACE RBRACKET RBRACE PLUSPLUS PLUS PERCENT OR NOT_MATCH_OP NEWLINE NEQ MINUS MATCH_OP LT LPAREN LE LBRACKET LBRACE GT GE EQEQ EOF COMMA COLON AND ]
## Transitions:
-- On LBRACE shift to state 21
-- On block shift to state 132
## Reductions:

State 21:
## Known stack suffix:
## LBRACE
## LR(1) items:
block -> LBRACE . sep_lines terminated_stmts RBRACE [ STAR SLASH RPAREN REGEX_REPLACE RBRACKET RBRACE PLUSPLUS PLUS PERCENT OR NOT_MATCH_OP NEWLINE NEQ MINUS MATCH_OP LT LPAREN LE LBRACKET LBRACE GT GE EQEQ EOF ELSE COMMA COLON AND ]
## Transitions:
-- On sep_lines shift to state 22
## Reductions:
-- On WHILE TRUE STRING RETURN REGEX REC RBRACE NOT NIL NEWLINE MINUS LPAREN LET LBRACKET LBRACE INT IF IDENT FOR FN FLOAT FALSE
--   reduce production sep_lines ->

State 22:
## Known stack suffix:
## LBRACE sep_lines
## LR(1) items:
block -> LBRACE sep_lines . terminated_stmts RBRACE [ STAR SLASH RPAREN REGEX_REPLACE RBRACKET RBRACE PLUSPLUS PLUS PERCENT OR NOT_MATCH_OP NEWLINE NEQ MINUS MATCH_OP LT LPAREN LE LBRACKET LBRACE GT GE EQEQ EOF ELSE COMMA COLON AND ]
sep_lines -> sep_lines . NEWLINE [ WHILE TRUE STRING RETURN REGEX REC RBRACE NOT NIL NEWLINE MINUS LPAREN LET LBRACKET LBRACE INT IF IDENT FOR FN FLOAT FALSE ]
## Transitions:
-- On WHILE shift to state 2
-- On TRUE shift to state 3
-- On STRING shift to state 4
-- On RETURN shift to state 23
-- On REGEX shift to state 5
-- On REC shift to state 78
-- On NOT shift to state 6
-- On NIL shift to state 7
-- On NEWLINE shift to state 85
-- On MINUS shift to state 8
-- On LPAREN shift to state 9
-- On LET shift to state 86
-- On LBRACKET shift to state 10
-- On LBRACE shift to state 11
-- On INT shift to state 12
-- On IF shift to state 90
-- On IDENT shift to state 102
-- On FOR shift to state 105
-- On FN shift to state 110
-- On FLOAT shift to state 24
-- On FALSE shift to state 25
-- On unary_expr shift to state 26
-- On terminated_stmts shift to state 116
-- On stmt shift to state 118
-- On primary_expr shift to state 27
-- On postfix_expr shift to state 124
-- On or_expr shift to state 30
-- On mul_expr shift to state 32
-- On match_expr shift to state 39
-- On expr shift to state 131
-- On concat_expr shift to state 44
-- On cmp_expr shift to state 47
-- On and_expr shift to state 71
-- On add_expr shift to state 50
## Reductions:
-- On RBRACE
--   reduce production terminated_stmts ->

State 23:
## Known stack suffix:
## RETURN
## LR(1) items:
stmt -> RETURN . expr [ RBRACE NEWLINE EOF ]
## Transitions:
-- On TRUE shift to state 3
-- On STRING shift to state 4
-- On REGEX shift to state 5
-- On NOT shift to state 6
-- On NIL shift to state 7
-- On MINUS shift to state 8
-- On LPAREN shift to state 9
-- On LBRACKET shift to state 10
-- On LBRACE shift to state 11
-- On INT shift to state 12
-- On IDENT shift to state 13
-- On FN shift to state 14
-- On FLOAT shift to state 24
-- On FALSE shift to state 25
-- On unary_expr shift to state 26
-- On primary_expr shift to state 27
-- On postfix_expr shift to state 28
-- On or_expr shift to state 30
-- On mul_expr shift to state 32
-- On match_expr shift to state 39
-- On expr shift to state 77
-- On concat_expr shift to state 44
-- On cmp_expr shift to state 47
-- On and_expr shift to state 71
-- On add_expr shift to state 50
## Reductions:

State 24:
## Known stack suffix:
## FLOAT
## LR(1) items:
primary_expr -> FLOAT . [ STAR SLASH RPAREN REGEX_REPLACE RBRACKET RBRACE PLUSPLUS PLUS PERCENT OR NOT_MATCH_OP NEWLINE NEQ MINUS MATCH_OP LT LPAREN LE LBRACKET LBRACE GT GE EQEQ EOF COMMA COLON AND ]
## Transitions:
## Reductions:
-- On STAR SLASH RPAREN REGEX_REPLACE RBRACKET RBRACE PLUSPLUS PLUS PERCENT OR NOT_MATCH_OP NEWLINE NEQ MINUS MATCH_OP LT LPAREN LE LBRACKET LBRACE GT GE EQEQ EOF COMMA COLON AND
--   reduce production primary_expr -> FLOAT

State 25:
## Known stack suffix:
## FALSE
## LR(1) items:
primary_expr -> FALSE . [ STAR SLASH RPAREN REGEX_REPLACE RBRACKET RBRACE PLUSPLUS PLUS PERCENT OR NOT_MATCH_OP NEWLINE NEQ MINUS MATCH_OP LT LPAREN LE LBRACKET LBRACE GT GE EQEQ EOF COMMA COLON AND ]
## Transitions:
## Reductions:
-- On STAR SLASH RPAREN REGEX_REPLACE RBRACKET RBRACE PLUSPLUS PLUS PERCENT OR NOT_MATCH_OP NEWLINE NEQ MINUS MATCH_OP LT LPAREN LE LBRACKET LBRACE GT GE EQEQ EOF COMMA COLON AND
--   reduce production primary_expr -> FALSE

State 26:
## Known stack suffix:
## unary_expr
## LR(1) items:
mul_expr -> unary_expr . [ STAR SLASH RPAREN RBRACKET RBRACE PLUSPLUS PLUS PERCENT OR NOT_MATCH_OP NEWLINE NEQ MINUS MATCH_OP LT LE LBRACE GT GE EQEQ EOF COMMA COLON AND ]
## Transitions:
## Reductions:
-- On STAR SLASH RPAREN RBRACKET RBRACE PLUSPLUS PLUS PERCENT OR NOT_MATCH_OP NEWLINE NEQ MINUS MATCH_OP LT LE LBRACE GT GE EQEQ EOF COMMA COLON AND
--   reduce production mul_expr -> unary_expr

State 27:
## Known stack suffix:
## primary_expr
## LR(1) items:
postfix_expr -> primary_expr . [ STAR SLASH RPAREN REGEX_REPLACE RBRACKET RBRACE PLUSPLUS PLUS PERCENT OR NOT_MATCH_OP NEWLINE NEQ MINUS MATCH_OP LT LPAREN LE LBRACKET LBRACE GT GE EQEQ EOF COMMA COLON AND ]
## Transitions:
## Reductions:
-- On STAR SLASH RPAREN REGEX_REPLACE RBRACKET RBRACE PLUSPLUS PLUS PERCENT OR NOT_MATCH_OP NEWLINE NEQ MINUS MATCH_OP LT LPAREN LE LBRACKET LBRACE GT GE EQEQ EOF COMMA COLON AND
--   reduce production postfix_expr -> primary_expr

State 28:
## Known stack suffix:
## postfix_expr
## LR(1) items:
postfix_expr -> postfix_expr . LPAREN arg_list RPAREN [ STAR SLASH RPAREN RBRACKET RBRACE PLUSPLUS PLUS PERCENT OR NOT_MATCH_OP NEWLINE NEQ MINUS MATCH_OP LT LPAREN LE LBRACKET LBRACE GT GE EQEQ EOF COMMA COLON AND ]
postfix_expr -> postfix_expr . LBRACKET expr RBRACKET [ STAR SLASH RPAREN RBRACKET RBRACE PLUSPLUS PLUS PERCENT OR NOT_MATCH_OP NEWLINE NEQ MINUS MATCH_OP LT LPAREN LE LBRACKET LBRACE GT GE EQEQ EOF COMMA COLON AND ]
unary_expr -> postfix_expr . [ STAR SLASH RPAREN RBRACKET RBRACE PLUSPLUS PLUS PERCENT OR NOT_MATCH_OP NEWLINE NEQ MINUS MATCH_OP LT LE LBRACE GT GE EQEQ EOF COMMA COLON AND ]
## Transitions:
-- On LPAREN shift to state 29
-- On LBRACKET shift to state 74
## Reductions:
-- On STAR SLASH RPAREN RBRACKET RBRACE PLUSPLUS PLUS PERCENT OR NOT_MATCH_OP NEWLINE NEQ MINUS MATCH_OP LT LE LBRACE GT GE EQEQ EOF COMMA COLON AND
--   reduce production unary_expr -> postfix_expr
